@@ -43,8 +43,8 @@ tmerge <- function(data1, data2, id, ..., tstart, tstop, options) {
         if (length(na.rm) !=1 || ! is.logical(na.rm))
             stop("na.rm option must be TRUE or FALSE")
         if (length(tdcstart) !=1) stop("tdcstart must be a single value")
-       list(idname=idname, tstartname=tstartname, tstopname=tstopname, 
-            delay=delay, na.rm=na.rm, tdcstart=tdcstart)
+        list(idname=idname, tstartname=tstartname, tstopname=tstopname, 
+             delay=delay, na.rm=na.rm, tdcstart=tdcstart)
     }
 
     tname <- attr(data1, "tname")
@@ -329,28 +329,49 @@ tmerge <- function(data1, data2, id, ..., tstart, tstop, options) {
             index <- .Call(Ctmerge2, match(baseid, uid), dstop, 
                                        match(id, uid),  etime)
 
-            #if (!is.null(newvar))      
-            #   warning(paste0("replacement of variable '", argname[ii], "'")) 
+            if (firstcall && !is.null(newvar)) {
+                warning(paste0("replacement of variable '", argname[ii], "'"))
+                newvar <- NULL
+            }
 
-            if (is.null(yinc)) newvar <- ifelse(index==0, 0L, 1L) # add a 0/1 variable
-            else {
-                newvar <- yinc[pmax(1L, index)]
-                if (any(index==0)) {
-                    if (is.na(default)) is.na(newvar) <- (index==0L)
-                    else {
-                        if (is.numeric(newvar)) newvar[index==0L] <- as.numeric(default)
+            if (is.null(newvar)) {
+                if (is.null(yinc)) newvar <- ifelse(index==0, 0L, 1L) # add a 0/1 variable
+                else {
+                    newvar <- yinc[pmax(1L, index)]
+                    if (any(index==0)) {
+                        if (is.na(default)) is.na(newvar) <- (index==0L)                
                         else {
-                            if (is.factor(newvar)) {
-                                # special case: if default isn't in the set of levels,
-                                #   add it to the levels
-                                if (is.na(match(default, levels(newvar))))
-                                    levels(newvar) <- c(levels(newvar), default)
+                            if (is.numeric(newvar)) newvar[index==0L] <- as.numeric(default)
+                            else {
+                                if (is.factor(newvar)) {
+                                    # special case: if default isn't in the set of levels,
+                                    #   add it to the levels
+                                    if (is.na(match(default, levels(newvar))))
+                                        levels(newvar) <- c(levels(newvar), default)
+                                }
+                                newvar[index== 0L] <- default
                             }
-                            newvar[index== 0L] <- default
                         }
                     }
                 }
-            }
+            } else {
+                # make sure new data type matches the old
+                if (is.null(yinc)){
+                    if (is.integer(newvar) && all(newvar==0L | newvar==1L))
+                        newvar[index!=0L] <- 1L
+                    else stop("tdc update does not match prior variable type: ", argname[ii])
+                }
+                else if (is.factor(yinc)) {
+                    if (!is.factor(newvar)) 
+                        stop("tdc update does not match prior variable type: ", argname[ii])
+                    if (!identical(levels(yinc), levels(newvar)))      
+                        stop("tdc update's levels do not match prior variable: ", argname[ii])
+                    newvar[index!= 0L] <- yinc[index]
+                } 
+                else if (class(yinc) != class(newvar))
+                    stop("tdc update does not match prior variable type: ", argname[ii]) 
+                else newvar[index!= 0L] <- yinc[index]
+            }   
         }
         # add events
         if (argclass[ii] %in% c("cumtdc", "cumevent")) {
@@ -434,6 +455,7 @@ tmerge <- function(data1, data2, id, ..., tstart, tstop, options) {
         }  
 
         newdata[[argname[ii]]] <- newvar
+        firstcall <- FALSE 
     }
     attr(newdata, "tname") <- topt[c("idname", "tstartname", "tstopname")]
     attr(newdata, "tcount") <- rbind(attr(data1, "tcount"), tcount)
