@@ -92,8 +92,8 @@ tmerge.control <- function(idname="id", tstartname="tstart", tstopname="tstop",
     if (length(na.rm) !=1 || ! is.logical(na.rm))
         stop("na.rm option must be TRUE or FALSE")
     if (length(tdcstart) !=1) stop("tdcstart must be a single value")
-   list(idname=idname, tstartname=tstartname, tstopname=tstopname, 
-        delay=delay, na.rm=na.rm, tdcstart=tdcstart)
+    list(idname=idname, tstartname=tstartname, tstopname=tstopname, 
+         delay=delay, na.rm=na.rm, tdcstart=tdcstart)
 }
 
 tname <- attr(data1, "tname")
@@ -364,6 +364,7 @@ for (ii in seq(along.with=args)) {
     tcount[ii,8] <- sum(tapply(etime, id, function(x) sum(duplicated(x))))
 
     <<tmerge-addin2>>
+    firstcall <- FALSE 
 }
 @ 
 
@@ -469,9 +470,13 @@ The most common is a tdc, so start with it.
 The C routine returns a set of indices: 0,1,1,2,3,0,4,... would mean that
 row 1 of the new data happens before the tdc variable, 2 and 3 take values from
 the first element of yinc, etc.  
-By returning and index, the yinc variable can be of any data type.  Using
+By returning an index, the yinc variable can be of any data type.  Using
 is.na() on the left side below causes the \emph{right} kind of NA to be inserted
 (this trick was stolen from the merge routine).
+
+If this is a first call, don't allow the new variable to overwrite a variable
+already existing in the data set, we found it leads to problems.  (Usually it
+is a user mistake.)  However, tdc calls themselves can stack.
 
 <<tmerge-addin2>>=
 # add a tdc variable
@@ -491,28 +496,49 @@ if (argclass[ii] == "tdc") {
     index <- .Call(Ctmerge2, match(baseid, uid), dstop, 
                                match(id, uid),  etime)
 
-    #if (!is.null(newvar))      
-    #   warning(paste0("replacement of variable '", argname[ii], "'")) 
+    if (firstcall && !is.null(newvar)) {
+        warning(paste0("replacement of variable '", argname[ii], "'"))
+        newvar <- NULL
+    }
 
-    if (is.null(yinc)) newvar <- ifelse(index==0, 0L, 1L) # add a 0/1 variable
-    else {
-        newvar <- yinc[pmax(1L, index)]
-        if (any(index==0)) {
-            if (is.na(default)) is.na(newvar) <- (index==0L)
-            else {
-                if (is.numeric(newvar)) newvar[index==0L] <- as.numeric(default)
+    if (is.null(newvar)) {
+        if (is.null(yinc)) newvar <- ifelse(index==0, 0L, 1L) # add a 0/1 variable
+        else {
+            newvar <- yinc[pmax(1L, index)]
+            if (any(index==0)) {
+                if (is.na(default)) is.na(newvar) <- (index==0L)                
                 else {
-                    if (is.factor(newvar)) {
-                        # special case: if default isn't in the set of levels,
-                        #   add it to the levels
-                        if (is.na(match(default, levels(newvar))))
-                            levels(newvar) <- c(levels(newvar), default)
+                    if (is.numeric(newvar)) newvar[index==0L] <- as.numeric(default)
+                    else {
+                        if (is.factor(newvar)) {
+                            # special case: if default isn't in the set of levels,
+                            #   add it to the levels
+                            if (is.na(match(default, levels(newvar))))
+                                levels(newvar) <- c(levels(newvar), default)
+                        }
+                        newvar[index== 0L] <- default
                     }
-                    newvar[index== 0L] <- default
                 }
             }
         }
-    }
+    } else {
+        # make sure new data type matches the old
+        if (is.null(yinc)){
+            if (is.integer(newvar) && all(newvar==0L | newvar==1L))
+                newvar[index!=0L] <- 1L
+            else stop("tdc update does not match prior variable type: ", argname[ii])
+        }
+        else if (is.factor(yinc)) {
+            if (!is.factor(newvar)) 
+                stop("tdc update does not match prior variable type: ", argname[ii])
+            if (!identical(levels(yinc), levels(newvar)))      
+                stop("tdc update's levels do not match prior variable: ", argname[ii])
+            newvar[index!= 0L] <- yinc[index]
+        } 
+        else if (class(yinc) != class(newvar))
+            stop("tdc update does not match prior variable type: ", argname[ii]) 
+        else newvar[index!= 0L] <- yinc[index]
+    }   
 }
 @ 
 
