@@ -42,19 +42,24 @@ all.equal(mydat3$xx, c(5,5,3,2,1,2,5,1,3,5,1))
 temp <- tmerge(mydata, tests, id=idd, xx=tdc(date, num, 5)) # alternate default
 all.equal(mydat3$xx, temp$xx)
 
-# Multiple chained calls.  
-newcgd <- tmerge(data1=cgd0[, 1:13], data2=cgd0, id=id, tstop=futime)
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime1)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime2)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime3)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime4)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime5)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime6)) 
-newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime7)) 
-newcgd <- tmerge(newcgd, newcgd, id, enum=cumtdc(tstart))
-all.equal(dim(newcgd), c(203,17))
-all.equal(as.vector(table(newcgd$infect)), c(127, 76))
+# Multiple chained calls. 
+temp <- outer(cgd0$id, 100*0:6, "+")
+colnames(temp) <- paste0("x", 1:7)   # add a time dependent covariate too 
+test <- cbind(cgd0, temp)
 
+newcgd <- tmerge(data1=cgd0[, 1:13], data2=cgd0, id=id, tstop=futime)
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime1), xx=tdc(etime1, x1)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime2), xx=tdc(etime2, x2)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime3), xx=tdc(etime3, x3)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime4), xx=tdc(etime4, x4)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime5), xx=tdc(etime5, x5)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime6), xx=tdc(etime6, x6)) 
+newcgd <- tmerge(newcgd, test, id=id, infect = event(etime7), xx=tdc(etime7, x7)) 
+newcgd <- tmerge(newcgd, newcgd, id, enum=cumtdc(tstart))
+all.equal(dim(newcgd), c(203,18))
+all.equal(as.vector(table(newcgd$infect)), c(127, 76))
+temp <- with(newcgd, ifelse(enum==1, NA, (enum-2)*100))
+all.equal(newcgd$xx, newcgd$id + temp)
 tcount <- attr(newcgd, "tcount")
 all(tcount[,1:3] ==0)  # no early, late, or gap
 
